# personal-os

./: .gitignore  Cargo.toml  QUICKDEPLOY.md  QUICKSTART.md  README.md  SPECS.md  setup.sh  x86_64-personal_os.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-to-ec2.yml  terraform-deploy.yml
deployment/: DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md
deployment/ec2/: setup-ec2.sh
src/: agent.rs  allocator.rs  anthropic.rs  awareness.rs  block.rs  chat_view.rs  compositor.rs  config.rs  context.rs  continuity.rs  conversation_ui.rs  display.rs  dns.rs  executor.rs  file_ops.rs  font.rs  framebuffer.rs  fs.rs  http.rs  intent.rs  interrupts.rs  json.rs  keyboard.rs  main.rs  memory.rs  mouse.rs  net.rs  pci.rs  permissions.rs  proactive.rs  secrets.rs  shell.rs  status_bar.rs  streaming.rs  task.rs  test_framework.rs  tls.rs  ui_mutability.rs  vga_buffer.rs  virtio_net.rs
src/llm/: anthropic.rs  local.rs  mod.rs
terraform/: .gitignore  README.md  SECRETS.md  backend.tf  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
web/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: OSViewer.tsx
